--- a/6cubic.css
+++ b/6cubic.css
@@ -1105,6 +1105,20 @@ form .button-area button:hover{
     .services .serv-content .card{
         width: 100%;
     }
+    .home .home-content #home11  {
+        display: inline-block;
+        background: crimson;
+        color: #fff;
+        font-size: 15px;
+        padding: 10px 30px;
+        margin-top: 20px;
+        font-weight: 400;
+        border-radius: 6px;
+        border: 2px solid crimson;
+        transition: all 0.3s ease;
+        position:absolute; bottom:40%; left:14%;
+        z-index: 9999;
+    }
 }
 
 @media (max-width: 500px) {
